Fix overflow mobile

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -34,3 +34,7 @@ button {
 * {
   box-sizing: border-box;
 }
+
+.overflow-auto {
+  overflow: auto;
+}
