--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -13,7 +13,7 @@
   height: 100%;
 }
 
-.-intro {
+.overflow-auto {
   overflow: auto;
 }
 
